--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.3",
+        "guzzlehttp/guzzle": "^7.10",
         "irazasyed/telegram-bot-sdk": "^3.15",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem": "^3.31",
+        "movemoveapp/laravel-dadata": "^1.0",
         "pxlrbt/filament-excel": "^2.5"
     },
     "require-dev": {
